--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta charset="utf-8">
+<link rel="stylesheet" href="styles.css">
 <title>This is a Website</title>
+</head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
