--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <link rel="stylesheet" href="styles.css">
-<title>This is a Website</title>
+<title>This is my Website</title>
 </head>
 <body>
 <h1>Hello World</h1>
